--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/db_example
 spring.datasource.username=root
 spring.datasource.password=123456
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
