--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,12 @@ spring.datasource.url=jdbc:mysql://localhost:3306/db_example
 spring.datasource.username=root
 spring.datasource.password=123456
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+
+#Thymeleaf编码
+spring.thymeleaf.encoding=utf-8
+
+#热部署静态文件
+spring.thymeleaf.cache=false
+
+#使用HTML5标准
+spring.thymeleaf.mode=HTML5
