--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,12 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/db_example
+spring.datasource.url=jdbc:mysql://localhost:3306/access?characterEncoding=utf-8&useSSL=false&server-Timezone=UTC
 spring.datasource.username=root
 spring.datasource.password=123456
+spring.datasource.data-username=com.mysql.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.jpa.show-sql=true
+#spring.jpa.hibernate.ddl-auto=create-drop
 
 #Thymeleaf编码
 spring.thymeleaf.encoding=utf-8
@@ -11,3 +16,5 @@ spring.thymeleaf.cache=false
 
 #使用HTML5标准
 spring.thymeleaf.mode=HTML5
+
+spring.h2.console.enabled=true
