--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,6 +15,11 @@ spring.thymeleaf.encoding=utf-8
 spring.thymeleaf.cache=false
 
 #使用HTML5标准
-spring.thymeleaf.mode=HTML5
+spring.thymeleaf.mode=LEGACYHTML5
 
 spring.h2.console.enabled=true
+
+
+#server.port=80
+#server.tomcat.uri-encoding=UTF-8
+#server.context-path=/access
