--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,6 +19,8 @@ spring.thymeleaf.mode=LEGACYHTML5
 
 spring.h2.console.enabled=true
 
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
 
 #server.port=80
 #server.tomcat.uri-encoding=UTF-8
