--- a/pom.xml
+++ b/pom.xml
@@ -113,6 +113,12 @@
             <version>1.5.14.RELEASE</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-devtools</artifactId>
+            <optional>true</optional>
+        </dependency>
+
 
 
 
