--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,6 +22,9 @@ spring.h2.console.enabled=true
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 
+spring.devtools.restart.enabled=true
+spring.devtools.restart.additional-paths=src/main/java
 #server.port=80
 #server.tomcat.uri-encoding=UTF-8
 #server.context-path=/access
+spring.resources.static-locations=classpath:/templates/,classpath:/static/
