--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,4 +27,4 @@ spring.devtools.restart.additional-paths=src/main/java
 #server.port=80
 #server.tomcat.uri-encoding=UTF-8
 #server.context-path=/access
-spring.resources.static-locations=classpath:/templates/,classpath:/static/
+spring.resources.static-locations=classpath:/templates/
