--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/access?characterEncoding=utf-8&useSSL=false&server-Timezone=UTC
 spring.datasource.username=root
-spring.datasource.password=123456
+spring.datasource.password=root
 spring.datasource.data-username=com.mysql.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 
