--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/access?characterEncoding=utf-8&useSSL=false&server-Timezone=UTC
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=123456
 spring.datasource.data-username=com.mysql.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 
@@ -24,7 +24,7 @@ spring.thymeleaf.suffix=.html
 
 spring.devtools.restart.enabled=true
 spring.devtools.restart.additional-paths=src/main/java
-#server.port=80
+server.port=8080
 #server.tomcat.uri-encoding=UTF-8
 #server.context-path=/access
 spring.resources.static-locations=classpath:/templates/
