--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,6 +14,14 @@ spring.thymeleaf.encoding=utf-8
 #热部署静态文件
 spring.thymeleaf.cache=false
 
+
+# 资源缓存时间，单位秒
+spring.resources.cache-period=604800 
+# 开启gzip压缩
+spring.resources.chain.gzipped=true 
+# 启用缓存
+spring.resources.chain.cache=false
+
 #使用HTML5标准
 spring.thymeleaf.mode=LEGACYHTML5
 
